--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@azure/msal-node": "^3.6.0",
     "axios": "^1.10.0",
     "cohere-ai": "^7.17.1",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "imap": "^0.8.17",
     "imapflow": "^1.0.188",
