--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.10.0",
     "cohere-ai": "^7.17.1",
     "csv-parser": "^3.2.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.5.0",
     "imap": "^0.8.17",
     "imapflow": "^1.0.188",
