Preparing for Executable

--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "my-electron-app",
+  "name": "parsea",
+  "productName": "Parsea",
+  "author": "shaaflabs",
   "version": "1.0.0",
-  "description": "Hello World!",
+  "description": "An automation tool that reads your emails for you! Thus saving you time!",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "package": "electron-builder"
   },
-  "author": "Jane Doe",
   "license": "MIT",
   "devDependencies": {
     "electron": "^36.4.0",
+    "electron-builder": "^26.0.12",
     "electron-reload": "^2.0.0-alpha.1"
   },
   "dependencies": {
@@ -23,5 +26,23 @@
     "imap": "^0.8.17",
     "imapflow": "^1.0.188",
     "mailparser": "^3.7.3"
+  },
+  "build": {
+    "appId": "com.shaaflabs.parsea",
+    "productName": "Parsea",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "**/*",
+      "!resources${/*}"
+    ],
+    "win": {
+      "target": "nsis"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    }
   }
 }
